# myfi

./: .gitignore  docker-compose.prod.yml  docker-compose.yml
ai-service/: Dockerfile  pyproject.toml  requirements.txt
ai-service/src/ezistock_ai/: __init__.py  config.py  main.py
ai-service/src/ezistock_ai/agents/: __init__.py  base.py  idea_generator.py  investment_advisor.py  memory.py  news_analyst.py  orchestrator.py  schemas.py  strategy_builder.py  technical_analyst.py
ai-service/src/ezistock_ai/agents/prompts/: __init__.py  advisor.py  news.py  strategy.py  technical.py
ai-service/src/ezistock_ai/alpha/: __init__.py  backtest_layer.py  data_layer.py  deployment_layer.py  model_layer.py  regime_detector.py
ai-service/src/ezistock_ai/feedback/: __init__.py  accuracy.py  bias.py  engine.py
ai-service/src/ezistock_ai/grpc_server/: __init__.py  agent_servicer.py  alpha_servicer.py  feedback_servicer.py
ai-service/src/ezistock_ai/infra/: __init__.py  parquet.py  s3.py
ai-service/src/ezistock_ai/llm/: __init__.py  cache.py  cost.py  mock.py  router.py
ai-service/src/ezistock_ai/research/: __init__.py  factor_snapshot.py  generator.py  pdf.py  sector_deepdive.py
ai-service/tests/: conftest.py  test_mock_llm.py
backend/: Dockerfile  agent.go  asset_registry.go  asset_registry_test.go  cache.go  checkpoint_price_services_test.go  circuit_breaker.go  crypto.go  crypto_service.go  crypto_service_test.go  data_source_router.go  data_source_router_test.go  database.go  fx_service.go  fx_service_test.go  go.mod  go.sum  gold_service.go  gold_service_test.go  (+10 more)
(+413 files in other folders)
